--- a/src/app/component/experts/view-appoinments/view-appoinments.component.html
+++ b/src/app/component/experts/view-appoinments/view-appoinments.component.html
@@ -34,84 +34,102 @@
                 </div>
                 <!-- Active schedules -->
                 <ng-container *ngIf="schedules">
-                    <div class="flex justify-center" *ngFor="let item of activeAppoinments">
-                        <div class=" w-2/3 ml-8 mr-8 mb-0 border  border-gray-200  pt-5 pb-5">
+                    <ng-container *ngIf="activeAppoinments?.length!=0 ;else nocontent ">
+                        <div class="flex justify-center" *ngFor="let item of activeAppoinments">
+                            <div class=" w-2/3 ml-8 mr-8 mb-0 border  border-gray-200  pt-5 pb-5">
 
 
-                            <div class="flex items-center gap-4 pl-4 ">
-                                <img alt="Women"
-                                    src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
-                                    class="h-12 w-12 rounded-lg object-cover" />
+                                <div class="flex items-center gap-4 pl-4 ">
+                                    <img alt="Women"
+                                        src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+                                        class="h-12 w-12 rounded-lg object-cover" />
 
-                                <div class="flex space-x-16 ">
-                                    <p class="font-medium text-black">{{item.user.name}}</p>
-                                    <p class="text-gray-500">Session
-                                        Scheduleded On <span
-                                            class="font-medium text-black text-sm">{{item.scheduledAt.slot_date|date
-                                            }}</span> At
-                                        <span
-                                            class="font-medium text-black text-sm">{{item.scheduledAt.slot_time}}</span>
-                                    </p>
-                                    <ng-container *ngIf="activateJoinButton; else notactive ">
-                                        <div class="mr-5 pr-10">
+                                    <div class="flex space-x-16 ">
+                                        <p class="font-medium text-black">{{item.user.name}}</p>
+                                        <p class="text-gray-500">Session
+                                            Scheduleded On <span
+                                                class="font-medium text-black text-sm">{{item.scheduledAt.slot_date|date
+                                                }}</span> At
+                                            <span
+                                                class="font-medium text-black text-sm">{{item.scheduledAt.slot_time}}</span>
+                                        </p>
+
+                                        <div class="mr-5 pr-10" *ngIf="isTimeToDisplayButton(item);else notactive">
 
                                             <button
-                                                class="bg-orange-500 text-white px-7 py-1.5 text-xs font-medium  rounded-lg ">Join</button>
+                                                class="bg-orange-500 text-white px-7 py-1.5 text-xs font-medium  rounded-lg"
+                                                (click)="sendDetail(item._id,item.scheduledAt.slot_date,item.scheduledAt.slot_time,item.user._id)">
+                                                Start</button>
                                         </div>
-                                    </ng-container>
 
-                                    <ng-template #notactive>
 
-                                        <svg class="w-6 h-6 text-orange-500 dark:text-white" aria-hidden="true"
-                                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
-                                            <path stroke="currentColor" stroke-linejoin="round" stroke-width="2"
-                                                d="M10 6v4l3.276 3.276M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
-                                        </svg>
+                                        <ng-template #notactive>
 
-                                        <div>
+                                            <svg class="w-6 h-6 text-orange-500 dark:text-white" aria-hidden="true"
+                                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                                                <path stroke="currentColor" stroke-linejoin="round" stroke-width="2"
+                                                    d="M10 6v4l3.276 3.276M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                                            </svg>
 
-                                        </div>
-                                    </ng-template>
+                                            <div>
+
+                                            </div>
+                                        </ng-template>
+                                    </div>
                                 </div>
-                            </div>
 
+                            </div>
                         </div>
-                    </div>
+                    </ng-container>
                 </ng-container>
                 <!-- previouse Schedules -->
                 <ng-container *ngIf="previouseSchedules">
-                    <div class="flex justify-center" *ngFor="let item of previouseAppoinments">
-                        <div class=" w-2/3 ml-8 mr-8 mb-0 border border-gray-200 space-y-4  pt-5 pb-5">
+                    <ng-container *ngIf="previouseAppoinments?.length!=0;else nocontent">
+                        <div class="flex justify-center" *ngFor="let item of previouseAppoinments">
+                            <div class=" w-2/3 ml-8 mr-8 mb-0 border border-gray-200 space-y-4  pt-5 pb-5">
 
 
-                            <div class="flex items-center gap-4 pl-4 ">
-                                <img alt="Women"
-                                    src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
-                                    class="h-12 w-12 rounded-lg object-cover" />
+                                <div class="flex items-center gap-4 pl-4 ">
+                                    <img alt="Women"
+                                        src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+                                        class="h-12 w-12 rounded-lg object-cover" />
 
-                                <div class="flex space-x-16">
-                                    <p class="font-medium text-black">{{item.user.name}}</p>
-                                    <p class="text-gray-500">Session
-                                        Conducted On <span
-                                            class="font-medium text-black text-sm">{{item.scheduledAt.slot_date|date
-                                            }}</span> At
-                                        <span
-                                            class="font-medium text-black text-sm">{{item.scheduledAt.slot_time}}</span>
-                                    </p>
-                                    <div class="mr-5 pr-10">
+                                    <div class="flex space-x-16">
+                                        <p class="font-medium text-black">{{item.user.name}}</p>
+                                        <p class="text-gray-500">Session
+                                            Conducted On <span
+                                                class="font-medium text-black text-sm">{{item.scheduledAt.slot_date|date
+                                                }}</span> At
+                                            <span
+                                                class="font-medium text-black text-sm">{{item.scheduledAt.slot_time}}</span>
+                                        </p>
+                                        <div class="mr-5 pr-10">
 
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
 
+                            </div>
                         </div>
-                    </div>
+                    </ng-container>
                 </ng-container>
 
 
 
             </div>
 
+            <ng-template #nocontent>
+                <div class="h-56 w-96 ml-64">
+                    <img src="../../../../assets/image/undraw_schedule_meeting_52nu.png" alt="">
+                </div>
+                <div>
+                    <div class="flex ml-[295px] mt-7 cursor-pointer">
+
+                        <p class="text-gray-500 font-medium ">No Appoinments Available Right Now</p>
+
+                    </div>
+                </div>
+            </ng-template>
 
 
         </section>
