--- a/src/app/component/experts/videocall/videocall.component.html
+++ b/src/app/component/experts/videocall/videocall.component.html
@@ -28,24 +28,27 @@
         <h1 class="font-normal text-lg mb-8 text-gray-500  ">Share the meet link here</h1>
         <div>
 
-            <form (ngSubmit)="submitForm()">
+            <form (ngSubmit)="submitForm()" #myForm="ngForm">
                 <div>
                     <label for="meetlink" class="mb-3 block text-sm font-medium text-black">Meet Link</label>
-                    <input type="text" id="meetlink" name="link" [(ngModel)]="formData.link" required
+                    <input type="text" id="meetlink" name="link" [(ngModel)]="formData.link" required #link="ngModel"
                         class="block w-full rounded-md border-gray-300 shadow-sm focus:border-primary-400 focus:ring focus:ring-primary-200 focus:ring-opacity-50 disabled:cursor-not-allowed disabled:bg-gray-50 disabled:text-gray-500"
                         placeholder="Paste link here" />
-
-                    <div *ngIf="!formData.link && formData.link !== ''" class="text-red-600 text-sm">Meet Link is
-                        required .
-                    </div>
+                    <ng-container *ngIf="!submitted">
+                        <div *ngIf="link.invalid && (link.dirty || link.touched)" class="text-red-600 text-sm">Meet Link
+                            is
+                            required.</div>
+                    </ng-container>
                 </div>
 
-                <button type="submit"
+                <button type="submit" [disabled]="myForm.invalid"
                     class="mt-5 rounded-lg border border-primary-500 bg-green-500 px-5 py-2 text-center text-xs font-semibold text-white shadow-sm transition-all hover:border-primary-700 hover:bg-primary-700 focus:ring focus:ring-primary-200 disabled:cursor-not-allowed disabled:border-primary-300 disabled:bg-primary-300">Send</button>
 
                 <button type="reset" class="ml-3 bg-red-500 rounded-lg mt-5 text-white px-5 py-2 font-medium text-xs"
                     (click)="delete()">Revoke</button>
+
             </form>
+
 
 
 
