--- a/src/app/component/users/chat-user/chat-user.component.html
+++ b/src/app/component/users/chat-user/chat-user.component.html
@@ -19,10 +19,10 @@
         </div>
     </div>
     <div class=" ">
-        <div class=" mt-10 m-48 flex h-[500px] border    border-gray-500 ">
+        <div class=" mt-10 m-48 flex h-[500px] border  border-dashed  border-gray-500 ">
 
             <!-- chatting listing area -->
-            <div class="bg-white w-4/5 border-r border-gray-500 pb-10 ">
+            <div class="bg-white w-4/5 border-r border-dashed  border-gray-500 pb-10 ">
 
                 <div class="p-5 flex justify-center">
                     <div>
@@ -47,7 +47,7 @@
 
                 <ng-container *ngIf="activeChats">
                     <div (click)="showChats(item.expert._id)" *ngFor="let item of ActiveChats"
-                        class=" ml-8 mr-8 mb-0 border border-gray-200  pt-5 pb-5 hover:bg-slate-100"
+                        class=" ml-8 mr-8 mb-0   pt-5 pb-5 hover:bg-slate-100"
                         [ngClass]="{'selected': selectedExpert === item.expert._id}">
 
 
@@ -72,7 +72,7 @@
                             <ng-container *ngIf="item.expert._id !== item2.expert._id">
 
                                 <div (click)="showChats(item.expert._id)"
-                                    class="  ml-8 mr-8 mb-0 border border-gray-200  pt-5 pb-5 hover:bg-slate-100"
+                                    class="  ml-8 mr-8 mb-0 border border-dashed border-gray-200  pt-5 pb-5 hover:bg-slate-100"
                                     [ngClass]="{'selected': selectedExpert === item.expert._id} ">
 
 
