--- a/src/app/component/experts/videocall/videocall.component.html
+++ b/src/app/component/experts/videocall/videocall.component.html
@@ -8,7 +8,11 @@
 
     </div>
 </nav>
-<div class="ml-48 mt-36 flex space-x-32 ">
+
+<button class="bg-orange-500 text-sm py-2 px-5 rounded-md mt-24 ml-10 font-medium hover:bg-orange-600 text-white"
+    (click)="backToAppoinment()">back</button>
+
+<div class="ml-48 mt-16 flex space-x-32 ">
     <div>
         <div id="jitsi-iframe"></div>
 
