--- a/src/app/component/users/appoinments/appoinments.component.html
+++ b/src/app/component/users/appoinments/appoinments.component.html
@@ -48,7 +48,7 @@
                                     <div class="mr-5 pr-10">
                                         <button
                                             class="bg-orange-500 text-white px-7 py-1.5 text-xs font-medium  rounded-lg "
-                                            (click)="openLinkInNewWindow()">Join</button>
+                                            (click)="openLinkInNewWindow(item._id,item.expert._id)">Join</button>
                                     </div>
                                 </ng-container>
 
@@ -135,3 +135,67 @@
     </ng-template>
 
 </section>
+
+<!-- rating modal -->
+<div [ngClass]="{'hidden': !showRatingModal}"
+    class="fixed ml-96 mt-36 left-0 right-0 z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full">
+
+    <div class=" w-full md:w-1/2 max-h-full md:h-1/2">
+        <div class="fixed inset-0 transition-opacity">
+            <div class="absolute inset-0 bg-black opacity-50"></div>
+        </div>
+        <!-- Modal content -->
+        <div class="relative bg-white rounded-lg  shadow dark:bg-gray-700 ">
+
+
+            <button type="button" (click)="closeRatingModal()"
+                class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ml-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white">
+                <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                    viewBox="0 0 14 14">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+                </svg>
+                <span class="sr-only">Close modal</span>
+            </button>
+
+            <div class="px-6 py-6 lg:px-8 ">
+
+                <div class="card  pt-5 mb-16 flex-col text-center">
+                    <p class="text-xl font-bold text-gray-500 pt-5  pb-8">Rate You'r Experiance With Our Experts
+                    </p>
+
+                    <!-- Other form fields can go here -->
+
+                    <p-rating [(ngModel)]="value" [stars]="5" class=" mt-5">
+                        <ng-template pTemplate="cancel">
+                            <img src="https://primefaces.org/cdn/primeng/images/demo/rating/cancel.png" width="55px"
+                                height="55px" />
+                        </ng-template>
+
+                        <ng-template pTemplate="onicon">
+                            <img src="https://primefaces.org/cdn/primeng/images/demo/rating/custom-icon-active.png"
+                                width="55px" height="55px" />
+                        </ng-template>
+                        <ng-template pTemplate="officon">
+                            <img src="https://primefaces.org/cdn/primeng/images/demo/rating/custom-icon.png"
+                                width="55px" height="55px" />
+                        </ng-template>
+                    </p-rating>
+
+
+
+
+                    <div class="mt-4 font-bold  "> {{reviewStatus[value-1]}}</div>
+                    <ng-container *ngIf="value>=0">
+                        <div class="mt-8 "><button (click)="ratingValue()"
+                                class="bg-orange-500 hover:bg-orange-400 text-white font-medium py-1.5 px-2.5 text-sm rounded-lg">submit</button>
+                        </div>
+                    </ng-container>
+
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
