expert profile edit , expert bug fixed

--- a/src/app/component/experts/expert-home/expert-home.component.html
+++ b/src/app/component/experts/expert-home/expert-home.component.html
@@ -21,7 +21,7 @@
                     <div class="text-white font-medium text-lg whitespace-nowrap">Total Appoiments</div>
                     <div class="flex justify-center">
                         <p class="text-white pt-3 font-bold text-lg">
-                            10</p>
+                            {{dasboardDetails?.totalAppoinment}}</p>
                     </div>
                 </div>
 
@@ -30,7 +30,7 @@
 
                     <p class="text-white font-medium text-lg whitespace-nowrap">Chat Revenue</p>
                     <div class="flex justify-center pt-2">
-                        <p class="text-white font-bold text-lg">20₹</p>
+                        <p class="text-white font-bold text-lg"> ₹ {{dasboardDetails?.chatRevenue}}</p>
                     </div>
                 </div>
                 <div
@@ -38,7 +38,7 @@
 
                     <p class="text-white font-medium text-lg whitespace-nowrap">Video Revenue</p>
                     <div class="flex justify-center pt-2">
-                        <p class="text-white font-bold text-lg">40₹</p>
+                        <p class="text-white font-bold text-lg"> ₹ {{dasboardDetails?.videorevenue}}</p>
                     </div>
                 </div>
                 <div
@@ -46,7 +46,7 @@
 
                     <p class="text-white font-medium text-lg whitespace-nowrap">Active Appoinment</p>
                     <div class="flex justify-center pt-2">
-                        <p class="text-white font-bold text-lg">50₹</p>
+                        <p class="text-white font-bold text-lg"> {{dasboardDetails?.activeAppoinment}}</p>
                     </div>
                 </div>
                 <!-- <div
